# aSyn_simulations

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml  topology_output.HPC
config/: simulation_stages.yaml  system_config.yaml  topology_config.yaml  topology_config_hairpin.yaml  topology_config_rod.yaml
config/GROMACS/: 1_minim.mdp  2_equil.mdp  3_equil.mdp  4_equil.mdp  5_equil.mdp  6_equil.mdp  7_prod_10ps_test.mdp  7_relax.mdp  8_prod.mdp  8_prod_1ns_test.mdp
plans/: build_system.md  simulation_setup.md  topology_generation.md
scripts/: PBC.sh  compute_protonation_state.py  generate_MOL2.sh  run_simulation_parallel.sh  setup_ambertools.sh
setup/: install_gromacs26.sh  install_gromacs_26_intel_HPC_GTX.sh  install_gromacs_26_intel_RTX.sh  install_gromacs_deps_mac.sh  setup_ambertools.sh
templates/: CIT2_minus_ideal.sdf  CIT_ideal.sdf  CIT_minus_ideal.sdf  TRS_ideal.sdf
templates/mol2/: citrate.mol2  citrate2_minus.mol2  citrate_minus.mol2  tris.mol2  tris_neutral.mol2  tris_neutral.sdf
topology_generation/: build_system.py  calculate_resp_charges.py  create_citrate_ions.py  generate_ligand_topology.py  generate_protein_topology.py  protonation_utils.py  run_simulation.py  simulation_runner_utils.py  system_builder_utils.py  topology_utils.py
topology_output/ligands/CI1/: ANTECHAMBER_AC.AC  ANTECHAMBER_AC.AC0  ANTECHAMBER_AM1BCC.AC  ANTECHAMBER_AM1BCC_PRE.AC  ANTECHAMBER_BOND_TYPE.AC0  ATOMTYPE.INF  CI1_AC.inpcrd  CI1_AC.mol2  CI1_AC.prmtop  CI1_GMX.itp  CI1_GMX.top  CI1_input.mol2  posre_CI1.itp  sqm.in  sqm.out  tleap_CI1.in
(+77 files in other folders)
